[tool.poetry]
name = "miner"
version = "0.1.0"
description = ""
authors = ["Prasanna Gadal <gadalprasanna68@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
tqdm = "^4.67.1"
starlette = ">=0.30.0"
pydantic = ">=2"
rich = ">=13"
pytest = ">=8"
torch = ">=2"
numpy = ">=1"
setuptools = ">=68"
bittensor = "^9.12.1"
bittensor-cli = "^9.14.1"
google-genai = "^1.46.0"
pillow = "^12.0.0"
openai = "^2.6.1"
torchvision = "^0.24.0"
transformers = "^4.57.1"
lpips = "^0.1.4"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
